--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
   <h2> Profile </h2>
+  <div class="hero">
   <p> Hi! My name is Ayo Osonowo, and I am 17 years old when I made this wepage. I turn 18 in March, and I finished all my high school requirements to graduate. I can't wait to learn how to code more efficently and more effectiley. I am doing this class to get a feel for coding and provide me an income when I get to college. I don't really have a resume because I have been in High School, and have not looked for a job yet.</p>
+  </div>
   </body>
  </html>
