--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <title>Ayo Osonowo's webpage</title>
-    <h1> Address: 10643 Welcome Bay N
-    Brooklyn Park, MN 55443 </h1>
+    <h1> Ayo Osonowo's webpage</h1>
+    <h2>Address: 10643 Welcome Bay N
+    Brooklyn Park, MN 55443 </h2>
   </head>
   <body>
-  <h2> Profile </h2>
+  <h3> Profile </h3>
     <br>
     <h3> Smart, Funny, very young, quick learner, egar to learn, and willing to help out people in need at any time.</h3>
   <div class="hero">
