--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     Brooklyn Park, MN 55443 </h2>
   </head>
   <body>
-  <h3> Profile </h3>
-    <h4> Smart, Funny, very young, quick learner, egar to learn, and willing to help out people in need at any time.</h4>
+  <h2> Profile </h2>
+    <h3> Smart, Funny, very young, quick learner, egar to learn, and willing to help out people in need at any time.</h3>
       <div class="hero">
-        <p> Hi! My name is Ayo Osonowo, and I am 17 years old when I made this wepage. I turn 18 in March, and I finished all my high school requirements to graduate. I can't wait to learn how to code more efficently and more effectiley. I am doing this class to get a feel for coding and provide me an income when I get to college. I don't really have a resume because I have been in High School, and have not looked for a job yet.</p>
+        <h4> Hi! My name is Ayo Osonowo, and I am 17 years old when I made this wepage. I turn 18 in March, and I finished all my high school requirements to graduate. I can't wait to learn how to code more efficently and more effectiley. I am doing this class to get a feel for coding and provide me an income when I get to college.</h4>
   </div>
+    <br></br>
+  <h2> Resume </h2>
+  <h3> Amazing Love </h3> 
+    
   </body>
  </html>
